--- a/bmi.html
+++ b/bmi.html
@@ -26,9 +26,9 @@
         flex-direction: column;
         align-items: left;
         justify-content: left;
-        font-size: 1.5em;
+        font-size: 17px;
         flex: 1; /* Chia đều không gian cho các item */
-        padding: 5px 20px;
+        padding: 5px 10px;
     }
     
     .result-item:not(:last-child) {
@@ -143,7 +143,7 @@
                 <div id="resultBoxBMI" style="display: none;">
                     <div class="result-item">
                         <div id="bmi-output"></div>
-                        <span>Body Mass Index (<div id="bmiCategory-output"></div>)</span>
+                        <span><div id="bmiCategory-output"></div></span>
                     </div>
                     <div class="result-item">
                         <div id="bsa-output"></div>
