--- a/bmi.html
+++ b/bmi.html
@@ -73,7 +73,7 @@
         <div class="description-box">
             <div class="formula-section">
                 <h3>What is BMI?</h3>
-                <p>Body Mass Index (BMI) is used as a screening tool to identify possible weight problems in children. BMI is calculated from a person's weight and height.</p>
+                <p><strong>Body Mass Index (BMI)</strong> is a measurement of a person's leanness or corpulence based on their height and weight, and is intended to quantify tissue mass. It is widely used as a general indicator of whether a person has a healthy body weight for their height. Specifically, the value obtained from the calculation of BMI is used to categorize whether a person is underweight, normal weight, overweight, or obese depending on what range the value falls between. These ranges of BMI vary based on factors such as region and age, and are sometimes further divided into subcategories such as severely underweight or very severely obese. Being overweight or underweight can have significant health effects, so while BMI is an imperfect measure of healthy body weight, it is a useful indicator of whether any additional testing or action is required. Refer to the table below to see the different categories based on BMI that are used by the calculator</p>
                 <h3>Formulas</h3>
                 <p>BMI (kg/m<sup>2</sup>) = weight (kg) / (height (m))<sup>2</sup></p>
                 <p>BSA (m<sup>2</sup>) = √[(height (cm) × weight (kg)) / 3600]</p>
