--- a/bmi.html
+++ b/bmi.html
@@ -80,7 +80,8 @@
             </div>
 
             <div class="facts-figures">
-                <h3>Facts & Figures</h3>
+                <h3>BMI table for adults</h3>
+                <p>This is the World Health Organization's (WHO) recommended body weight based on BMI values for adults. It is used for both men and women, age 20 or older.</p>
                 <table style="width: 100%; max-width: 450px;">
                     <thead>
                         <tr>
@@ -115,6 +116,10 @@
                         </tr>
                     </tbody>
                 </table>
+
+                <h3>BMI chart for adults</h3>
+                <p>This is a graph of BMI categories based on the World Health Organization data. The dashed lines represent subdivisions within a major categorization.</p>
+                <img src="data/bmi-chart.png" alt="BMI Chart for adults" />
             </div>
           </div>
     <div class="calculation-box" id="formBox">
