--- a/bmi.html
+++ b/bmi.html
@@ -136,7 +136,8 @@
                     <button type="button" onclick="calculateBMIandBSA()">Calculate BMI & BSA</button>
                 </div>
             </form>
-
+            <div id="warningMessage" class="warning"></div>
+        
             <div id="result" class="result-container">
                 <div style="font-size: 1.17em; font-weight: bold; margin-top: 4px; margin-bottom: 4px; padding-left: 5px;">Result:</div>
                 <p id="text1">Please fill out required fields.</p>
