--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -11,6 +11,28 @@
         h2 {
             color: #333;
         }
+        
+        .input-group {
+            display: flex;
+            flex: 2;
+            position: relative;
+        }
+        .input-group input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
+        }
+        .input-group button {
+            position: absolute;
+            right: 5px;
+            top: 5px;
+            padding: 5px;
+            background-color: #117D67;
+            color: white;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
         .form-group {
             margin-bottom: 15px;
         }
@@ -66,16 +88,21 @@
         <h2>Light's Criteria Calculator</h2>
 
         <form id="lights-criteria-form">
-<div class="form-group">
-    <label for="serumProtein">Serum Protein:</label>
-    <input type="number" id="serumProtein" name="serumProtein" step="0.1" min="0" required>
-    <button type="button" onclick="toggleUnit('serumProtein')">g/L ↔ g/dL</button>
-</div>
-<div class="form-group">
-    <label for="pleuralFluidProtein">Pleural Fluid Protein:</label>
-    <input type="number" id="pleuralFluidProtein" name="pleuralFluidProtein" step="0.1" min="0" required>
-    <button type="button" onclick="toggleUnit('pleuralFluidProtein')">g/L ↔ g/dL</button>
-</div>
+         <div class="form-group">
+                <label id="serumProteinLabel" for="serumProtein">Total Serum Protein (g/dL):</label>
+                <div class="input-group">
+                    <input type="number" id="serumProtein" name="serumProtein" step="0.1" min="0" required>
+                    <button type="button" onclick="toggleUnit('serumProtein', 'serumProteinLabel')">g/L ↔ g/dL</button>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label id="pleuralFluidProteinLabel" for="pleuralFluidProtein">Pleural Fluid Protein (g/dL):</label>
+                <div class="input-group">
+                    <input type="number" id="pleuralFluidProtein" name="pleuralFluidProtein" step="0.1" min="0" required>
+                    <button type="button" onclick="toggleUnit('pleuralFluidProtein', 'pleuralFluidProteinLabel')">g/L ↔ g/dL</button>
+                </div>
+            </div>
 
             <div class="form-group">
                 <label for="serumLDH">Serum LDH (IU/L):</label>
