--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -35,15 +35,17 @@
         }
         .form-group {
             margin-bottom: 15px;
+            display: flex;
+            align-items: center;
         }
         .form-group label {
-            display: block;
-            margin-bottom: 5px;
+            flex: 1;
+            margin-right: 5px;
         }
-        .form-group input {
-            width: 100%;
-            padding: 8px;
-            box-sizing: border-box;
+        .input-group {
+            display: flex;
+            flex: 2;
+            position: relative;
         }
       .result-container {
         max-width: 400px;
