--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -35,17 +35,15 @@
         }
         .form-group {
             margin-bottom: 15px;
-            display: flex;
-            align-items: center;
         }
         .form-group label {
-            flex: 1;
-            margin-right: 5px;
+            display: block;
+            margin-bottom: 5px;
         }
-        .input-group {
-            display: flex;
-            flex: 2;
-            position: relative;
+        .form-group input {
+            width: 100%;
+            padding: 8px;
+            box-sizing: border-box;
         }
       .result-container {
         max-width: 400px;
