--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -24,13 +24,14 @@
         }
         .input-group button {
             position: absolute;
-            right: 5px;
-            top: 5px;
-            padding: 5px;
+            right: 0;
+            top: 0;
+            bottom: 0;
+            width: 60px;
             background-color: #117D67;
             color: white;
             border: none;
-            border-radius: 4px;
+            border-radius: 0 4px 4px 0;
             cursor: pointer;
         }
         .form-group {
