--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -22,18 +22,18 @@
             padding: 8px;
             box-sizing: border-box;
         }
-        .input-group button {
-            position: absolute;
-            right: 0;
-            top: 0;
-            bottom: 0;
-            width: 60px;
-            background-color: #117D67;
-            color: white;
-            border: none;
-            border-radius: 0 4px 4px 0;
-            cursor: pointer;
-        }
+.input-group button {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 60px;
+    background-color: #117D67;
+    color: white;
+    border: none;
+    border-radius: 0 4px 4px 0;
+    cursor: pointer;
+}
         .form-group {
             margin-bottom: 15px;
         }
