--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -36,8 +36,12 @@
 }
         .form-group {
             margin-bottom: 15px;
+            display: flex;
+            align-items: center;
         }
         .form-group label {
+            flex: 1;
+            margin-right: 5px;
             display: block;
             margin-bottom: 5px;
         }
