--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -27,7 +27,7 @@
     right: 0;
     top: 50%;
     transform: translateY(-50%);
-    width: 60px;
+    width: auto;
     background-color: #117D67;
     color: white;
     border: none;
@@ -36,12 +36,8 @@
 }
         .form-group {
             margin-bottom: 15px;
-            display: flex;
-            align-items: center;
         }
         .form-group label {
-            flex: 1;
-            margin-right: 5px;
             display: block;
             margin-bottom: 5px;
         }
