--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -28,6 +28,7 @@
     top: 50%;
     transform: translateY(-50%);
     width: auto;
+    height: 100%;
     background-color: #117D67;
     color: white;
     border: none;
