--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -14,23 +14,25 @@
         
         .input-group {
             display: flex;
-            flex: 1;
             position: relative; 
         }
         .input-group input {
-           padding-right: 40px; /* Adds space to avoid overlapping with the button */
+           flex: 1;
+    padding-right: 50px; /* Đảm bảo khoảng trống cho nút bên phải */
+    box-sizing: border-box;
+    height: 40px; /* Độ cao của ô nhập liệu */
         }
 .input-group button {
     position: absolute;
-    right: 5px;
-    top: 50%;
-    transform: translateY(-50%);
+    right: 0;
+    top: 0;
+    height: 100%; /* Độ cao bằng ô nhập liệu */
     background-color: #117D67;
     color: white;
     border: none;
     border-radius: 0 4px 4px 0;
     cursor: pointer;
-    padding: 5px 10px;
+    padding: 0 10px;
 }
         .form-group {
             margin-bottom: 15px;
