--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -30,14 +30,14 @@
     position: absolute;
     right: 0;
     height: 100%; /* Độ cao bằng ô nhập liệu */
-    background-color: #4CAF50;
+    background-color: #3D5300;
     color: white;
     border: none;
     border-radius: 0 4px 4px 0; /* Bo góc phải */
     cursor: pointer;
-    padding: 0 8px; /* Đệm nhỏ hơn */
+    padding: 8px; /* Đệm nhỏ hơn */
     font-size: 14px; /* Kích thước chữ */
-    width: 38px; /* Độ rộng nhỏ hơn */
+    width: 70px; /* Độ rộng nhỏ hơn */
 }
 
 .input-group button:hover {
