--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -29,13 +29,13 @@
 .input-group button {
     position: absolute;
     right: 0;
-    height: 100%; /* Độ cao bằng ô nhập liệu */
-    background-color: #3D5300;
+    height: 40px; /* Độ cao bằng ô nhập liệu */
+    background-color: #006A67;
     color: white;
     border: none;
     border-radius: 0 4px 4px 0; /* Bo góc phải */
     cursor: pointer;
-    padding: 8px; /* Đệm nhỏ hơn */
+    padding: 2px 6px; /* Đệm nhỏ hơn */
     font-size: 14px; /* Kích thước chữ */
     width: 70px; /* Độ rộng nhỏ hơn */
 }
