--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <a id="item1" href="javascript:void(0)" onclick="loadPage('cpap.html'); highlightSelected('item1');">CPAP Calculator</a>
         <a id="item2" href="javascript:void(0)" onclick="loadPage('ett.html'); highlightSelected('item2');">ETT Size</a>
         <a id="item3" href="javascript:void(0)" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
-	<a id="item4" href="lightCriteria.html" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
+	<a id="item4" href="javascript:void(0)" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
