--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -30,10 +30,9 @@
     position: absolute;
     right: 0;
     height: 38px; /* Độ cao bằng ô nhập liệu */
-    background-color: #006A67;
-    color: white;
-    border: none;
-    border-radius: 0 4px 4px 0; /* Bo góc phải */
+    color: black;
+    border: 1px;
+    border-radius: 0 3px 3px 0; /* Bo góc phải */
     cursor: pointer;
     padding: 6px 2px; /* Đệm nhỏ hơn */
     font-size: 14px; /* Kích thước chữ */
