--- a/lightCriteria.html
+++ b/lightCriteria.html
@@ -30,8 +30,10 @@
     position: absolute;
     right: 0;
     height: 38px; /* Độ cao bằng ô nhập liệu */
-    color: black;
-    border: 1px;
+    background-color: #ffffff; /* Nền trắng */
+    color: #000000; /* Chữ đen */
+    border: 1px solid #000000; /* Viền đen */
+    box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.3); /* Đổ bóng phía trong */
     border-radius: 0 3px 3px 0; /* Bo góc phải */
     cursor: pointer;
     padding: 6px 2px; /* Đệm nhỏ hơn */
