--- a/ett.html
+++ b/ett.html
@@ -68,7 +68,7 @@
         </div>
 
 	<div class="calculation-box" id="formBox">
-	  <h2>ETT Size Calculator</h2>
+	  <h2>Pediatric Endotracheal Tube (ETT) Size</h2>
 		<form id="ettForm" onsubmit="calculateETT(); return false;">
 			<label for="ageInput">Tuổi</label>
 			<input type="number" id="ageInput" min="1" max="12" required placeholder="Nhập tuổi" />
