--- a/ibw.html
+++ b/ibw.html
@@ -64,10 +64,6 @@
             border: 1px solid #ccc;
             border-radius: 5px;
         }
-        .unit {
-            font-size: 0.9em;
-            color: #666;
-        }
     </style>
 </head>
 <body>
@@ -96,14 +92,12 @@
                 </div>
             </div>
             <div class="form-group">
-                <label for="height">Height</label>
+                <label for="height">Height (cm):</label>
                 <input type="number" id="height" min="1" placeholder="Norm: 20 - 200">
-                <span class="unit">cm</span>
             </div>
             <div class="form-group">
-                <label for="actualWeight">Actual body weight</label>
+                <label for="actualWeight">Actual body weight (kg):</label>
                 <input type="number" id="actualWeight" min="1" placeholder="Optional, for ABW calculation">
-                <span class="unit">kg</span>
             </div>
             <button type="button" onclick="calculateIBW()">Calculate IBW & ABW</button>
             </form>
