--- a/ibw.html
+++ b/ibw.html
@@ -53,17 +53,13 @@
             border-radius: 5px;
             cursor: pointer;
             background-color: #f0f0f0;
+            color: #000;
         }
         .gender-select button.active {
             background-color: #007bff;
             color: #fff;
         }
-        input[type="number"] {
-            width: 100%;
-            padding: 8px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
+        
     </style>
 </head>
 <body>
