--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a id="item2" href="javascript:void(0)" onclick="loadPage('ett.html'); highlightSelected('item2');">ETT Size</a>
         <a id="item3" href="javascript:void(0)" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
 	<a id="item4" href="javascript:void(0)" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
-	<a id="item5" href="javascript:void(0)" onclick="loadPage('ibw.html'); highlightSelected('item5');">IBW"</a>
+	<a id="item5" href="javascript:void(0)" onclick="loadPage('ibw.html'); highlightSelected('item5');">Ideal Body Weight</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
