--- a/ibw.html
+++ b/ibw.html
@@ -65,7 +65,9 @@
 <body>
     <div class="container_of_ett">
         <div class="description-box">
-            <h3>FORMULA</h3>
+            <h3>About Ideal body weight (IBW)</h3>
+            <p><strong>Ideal body weight</strong> is estimated based on height and does not take into account age, racial origin or muscle mass. For men the Devine formula is used and for women the Robinson formula is used. The rationale for this modification is the knowledge that the Devine formula underestimates ideal body weight in women and the Robinson formula performs poorly in tall men</p>
+            <h3>Formulas</h3>
             <p><strong>Ideal Body Weight (Devine formula):</strong></p>
             <ul>
                 <li>IBW (men) = 50 kg + 2.3 kg x (height, in - 60)</li>
