--- a/ibw.html
+++ b/ibw.html
@@ -99,6 +99,7 @@
             </div>
             <button type="button" onclick="calculateIBW()">Calculate IBW & ABW</button>
             </form>
+            <div id="warningMessage" class="warning"></div>
             <div id="result" class="result-container">
                 <div style="font-size: 1.17em; font-weight: bold; margin-top: 4px; margin-bottom: 4px; padding-left: 5px;">Result:</div>
                 <p id="text1">Please fill out required fields.</p>
