--- a/ibw.html
+++ b/ibw.html
@@ -56,7 +56,7 @@
             color: #000;
         }
         .gender-select button.active {
-            background-color: #007bff;
+            background-color: #1bb193;
             color: #fff;
         }
         
@@ -103,6 +103,16 @@
             <div id="result" class="result-container">
                 <div style="font-size: 1.17em; font-weight: bold; margin-top: 4px; margin-bottom: 4px; padding-left: 5px;">Result:</div>
                 <p id="text1">Please fill out required fields.</p>
+                <div id="resultIBW" style="display: none;">
+                    <div class="result-item">
+                        <div id="ibw-output"></div>
+                        <span>Ideal Body Weight</span>
+                    </div>
+                    <div class="result-item">
+                        <div id="abw-output"></div>
+                        <span>Adjusted Body Weight</span>
+                    </div>
+                </div>                
             </div>
         </div>
     </div>
