--- a/ibw.html
+++ b/ibw.html
@@ -108,7 +108,7 @@
                         <div id="ibw-output"></div>
                         <span>Ideal Body Weight</span>
                     </div>
-                    <div class="result-item">
+                    <div class="result-item" style="display: none;"> <!-- ABW ẩn khi không cần -->
                         <div id="abw-output"></div>
                         <span>Adjusted Body Weight</span>
                     </div>
