--- a/ibw.html
+++ b/ibw.html
@@ -29,8 +29,8 @@
         padding: 5px 10px;
     }
     
-    .result-item:not(:last-child) {
-        border-right: 1px solid white; /* Đường kẻ trắng giữa 2 kết quả */
+    .result-item.with-border {
+        border-right: 1px solid white; /* Đường kẻ trắng */
     }
     
     .result-item span {
