--- a/ibw.html
+++ b/ibw.html
@@ -77,6 +77,10 @@
             <ul>
                 <li>ABW = IBW + 0.4 x (actual body weight - IBW)</li>
             </ul>
+            <p style="color: red; font-weight: bold;">
+                Note: This formula is applicable only for individuals taller than 5 feet (1.52 meters).
+            </p>
+
         </div>
 
         <div class="calculation-box">
