--- a/ett.html
+++ b/ett.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <div class="container_of_ett">
+    <div class="container_of_content">
         <div class="description-box">
             <h3>MÔ TẢ</h3>
 
