--- a/bmi.html
+++ b/bmi.html
@@ -65,7 +65,7 @@
     }
 </style>
   <body>
-    <div class="container_of_ett">
+    <div class="container_of_content">
         <div class="description-box">
             <div class="formula-section">
                 <h3>What is BMI?</h3>
