--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -40,7 +40,7 @@
       const height = parseFloat(document.getElementById('height').value);
       const weight = parseFloat(document.getElementById('weight').value);
 
-      const response = await fetch('http://localhost:5000/calculate_zscore', {
+      const response = await fetch('https://mdcalc-production.up.railway.app/mdCalc', {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json'
