--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -1,58 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Z-Score Calculator</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Z-Score Calculator</title>
 </head>
 <body>
-  <h1>Z-Score Calculator</h1>
-  <form id="zscoreForm">
-    <label for="sex">Sex:</label>
-    <select id="sex" name="sex">
-      <option value="M">Male</option>
-      <option value="F">Female</option>
-    </select><br>
+    <h1>Z-Score Calculator</h1>
+    <form id="zscoreForm">
+        <label for="sex">Giới tính:</label>
+        <select id="sex" name="sex">
+            <option value="male">Nam</option>
+            <option value="female">Nữ</option>
+        </select><br><br>
+        <label for="age">Tuổi (ngày):</label>
+        <input type="number" id="age" name="age" required><br><br>
+        <label for="height">Chiều cao (cm):</label>
+        <input type="number" step="0.1" id="height" name="height" required><br><br>
+        <label for="weight">Cân nặng (kg):</label>
+        <input type="number" step="0.1" id="weight" name="weight" required><br><br>
+        <button type="button" onclick="calculateZScore()">Tính Z-Score</button>
+    </form>
+    <div id="result"></div>
 
-    <label for="age">Age in Months:</label>
-    <input type="number" id="age" name="age" required><br>
-
-    <label for="height">Height (cm):</label>
-    <input type="number" id="height" name="height" required><br>
-
-    <label for="weight">Weight (kg):</label>
-    <input type="number" id="weight" name="weight" required><br>
-
-    <button type="button" onclick="calculateZScore()">Calculate Z-Score</button>
-  </form>
-
-  <div id="result">
-    <h2>Results:</h2>
-    <p id="zlen">Length Z-Score: </p>
-    <p id="zwei">Weight Z-Score: </p>
-    <p id="zbmi">BMI Z-Score: </p>
-  </div>
-
-  <script>
-    async function calculateZScore() {
-      const sex = document.getElementById('sex').value;
-      const age = parseInt(document.getElementById('age').value);
-      const height = parseFloat(document.getElementById('height').value);
-      const weight = parseFloat(document.getElementById('weight').value);
-
-      const response = await fetch('https://mdcalc-production.up.railway.app/mdCalc', {
-        method: 'POST',
-        headers: {
-          'Content-Type': 'application/json'
-        },
-        body: JSON.stringify({ sex, age, height, weight })
-      });
-
-      const data = await response.json();
-      document.getElementById('zlen').innerText = `Length Z-Score: ${data.zlen}`;
-      document.getElementById('zwei').innerText = `Weight Z-Score: ${data.zwei}`;
-      document.getElementById('zbmi').innerText = `BMI Z-Score: ${data.zbmi}`;
-    }
-  </script>
+    <script>
+        async function calculateZScore() {
+            const formData = new FormData(document.getElementById('zscoreForm'));
+            const response = await fetch('/calculate_zscore', {
+                method: 'POST',
+                body: formData
+            });
+            const result = await response.json();
+            document.getElementById('result').innerHTML = `
+                <h2>Kết quả:</h2>
+                <p>Length-for-Age Z-Score: ${result['Length-for-Age Z-Score']}</p>
+                <p>Weight-for-Age Z-Score: ${result['Weight-for-Age Z-Score']}</p>
+                <p>BMI-for-Age Z-Score: ${result['BMI-for-Age Z-Score']}</p>
+            `;
+        }
+    </script>
 </body>
 </html>
