--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Z-Score Calculator</title>
+    <title>Tính Z-Score</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <h1>Z-Score Calculator</h1>
+    <h1>Tính Z-Score</h1>
     <form id="zscoreForm">
         <label for="sex">Giới tính:</label>
-        <select id="sex" name="sex">
+        <select id="sex" name="sex" required>
+            <option value="">Chọn giới tính</option>
             <option value="male">Nam</option>
             <option value="female">Nữ</option>
-        </select><br><br>
-        <label for="age">Tuổi (ngày):</label>
-        <input type="number" id="age" name="age" required><br><br>
+        </select>
+        <br>
+
+        <label for="age">Tuổi (tháng):</label>
+        <input type="number" id="age" name="age" required>
+        <br>
+
         <label for="height">Chiều cao (cm):</label>
-        <input type="number" step="0.1" id="height" name="height" required><br><br>
+        <input type="number" id="height" name="height" required>
+        <br>
+
         <label for="weight">Cân nặng (kg):</label>
-        <input type="number" step="0.1" id="weight" name="weight" required><br><br>
-        <button type="button" onclick="calculateZScore()">Tính Z-Score</button>
+        <input type="number" id="weight" name="weight" required>
+        <br>
+
+        <button type="submit">Tính toán</button>
     </form>
+
+    <h2>Kết quả:</h2>
     <div id="result"></div>
 
     <script>
-        async function calculateZScore() {
-            const formData = new FormData(document.getElementById('zscoreForm'));
-            const response = await fetch('/calculate_zscore', {
-                method: 'POST',
-                body: formData
+        $(document).ready(function() {
+            $('#zscoreForm').on('submit', function(event) {
+                event.preventDefault(); // Ngăn chặn hành động mặc định của form
+
+                $.ajax({
+                    type: 'POST',
+                    url: '/calculate_zscore',
+                    data: $(this).serialize(),
+                    success: function(response) {
+                        $('#result').html(`
+                            <p>Length-for-Age Z-Score: ${response['Length-for-Age Z-Score']}</p>
+                            <p>Weight-for-Age Z-Score: ${response['Weight-for-Age Z-Score']}</p>
+                            <p>BMI-for-Age Z-Score: ${response['BMI-for-Age Z-Score']}</p>
+                        `);
+                    },
+                    error: function(xhr) {
+                        $('#result').html('<p>' + xhr.responseJSON.error + '</p>');
+                    }
+                });
             });
-            const result = await response.json();
-            document.getElementById('result').innerHTML = `
-                <h2>Kết quả:</h2>
-                <p>Length-for-Age Z-Score: ${result['Length-for-Age Z-Score']}</p>
-                <p>Weight-for-Age Z-Score: ${result['Weight-for-Age Z-Score']}</p>
-                <p>BMI-for-Age Z-Score: ${result['BMI-for-Age Z-Score']}</p>
-            `;
-        }
+        });
     </script>
 </body>
 </html>
