--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <a id="item3" href="javascript:void(0)" onclick="loadPage('bmi.html'); highlightSelected('item3');">BMI & BSA Calculator</a>
 	<a id="item4" href="javascript:void(0)" onclick="loadPage('lightCriteria.html'); highlightSelected('item4');">Light's Criteria</a>
 	<a id="item5" href="javascript:void(0)" onclick="loadPage('ibw.html'); highlightSelected('item5');">Ideal Body Weight</a>
-    	<a id="item6" href="javascript:void(0)" onclick="loadZScoreCalculator(); highlightSelected('item6');">Z-Score</a>
+    	<a id="item6" href="/zscore-calculator" onclick="loadZScoreCalculator(event); highlightSelected('item6');">Z-Score</a>
     </div>
 	
     <div id="myOverlay" class="overlay" onclick="toggleSidebar()"></div>
