--- a/zscore-calculator.html
+++ b/zscore-calculator.html
@@ -8,7 +8,7 @@
     <script src="/script.js"></script> <!-- Cập nhật đường dẫn -->
     <title>Tính Z-score</title>
 </head>
-<body onload="highlightSelected(sessionStorage.getItem('selectedItem'));">
+<body onload="highlightSelected(sessionStorage.getItem('item6'));">
    <div class="header">
         <div class="icon-container" onclick="toggleSidebar()">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24" fill="none">
