--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>ICU Tools</title>
-    <link rel="icon" href="icon.png" type="image/png">
+    <link rel="icon" href="/icon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body onload="loadLastPage(); highlightSelected(sessionStorage.getItem('selectedItem') || 'item1');">
